--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "@angular/material": "^21.1.5",
     "@angular/platform-browser": "^21.1.0",
     "@angular/router": "^21.1.0",
+    "@apollo/client": "^4.1.6",
     "@ngrx/effects": "^21.0.1",
     "@ngrx/entity": "^21.0.1",
     "@ngrx/router-store": "^21.0.1",
@@ -39,9 +40,11 @@
     "@ngrx/store": "^21.0.1",
     "@ngrx/store-devtools": "^21.0.1",
     "@tanstack/angular-query-experimental": "^5.90.25",
+    "apollo-angular": "^13.0.0",
     "axios": "^1.13.5",
     "chart.js": "^4.5.1",
     "date-fns": "^4.1.0",
+    "graphql": "^16.13.0",
     "ng2-charts": "^8.0.0",
     "ngx-dropzone": "^3.1.0",
     "rxjs": "~7.8.0",
