--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -42,3 +42,10 @@ __screenshots__/
 # System files
 .DS_Store
 Thumbs.db
+# Claude / AI Tools
+.claude/
+claude.json
+claude.config.js
+claude.config.ts
+.anthropic/
+anthropic.json
