--- a/.env.example
+++ b/.env.example
@@ -4,12 +4,11 @@ DJANGO_DEBUG=False
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1,yourdomain.com
 DJANGO_SETTINGS_MODULE=auditshield.settings.production
 
-# ─── Database ─────────────────────────────────────────────────────────────────
-POSTGRES_DB=auditshield_db
-POSTGRES_USER=auditshield_user
-POSTGRES_PASSWORD=strong-postgres-password-here
-POSTGRES_HOST=db
-POSTGRES_PORT=5432
+# ─── Database (Turso / libSQL) ────────────────────────────────────────────────
+# Remote Turso:  libsql://your-database.aws-us-east-1.turso.io
+# Local SQLite:  file:db.sqlite3
+TURSO_DATABASE_URL=libsql://auditshield-oseemanzi.aws-us-east-1.turso.io
+TURSO_AUTH_TOKEN=your-turso-jwt-auth-token-here
 
 # ─── Redis (cache + Celery broker) ────────────────────────────────────────────
 REDIS_URL=redis://redis:6379/0
