--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -1,7 +1,7 @@
 FROM python:3.12-slim AS builder
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    build-essential libpq-dev \
+    build-essential libffi-dev libssl-dev \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
@@ -14,7 +14,7 @@ FROM python:3.12-slim
 RUN apt-get update && apt-get install -y --no-install-recommends \
     tesseract-ocr tesseract-ocr-eng \
     libmagic1 libpango-1.0-0 libpangoft2-1.0-0 \
-    postgresql-client gettext \
+    gettext \
     && rm -rf /var/lib/apt/lists/*
 
 # Non-root user for security
