--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,39 +13,19 @@ x-backend-common: &backend-common
     - ./backend:/app
     - media_data:/app/media
   depends_on:
-    db:
-      condition: service_healthy
     redis:
       condition: service_healthy
 
 services:
-  # ── PostgreSQL ───────────────────────────────────────────────────────────────
-  db:
-    image: postgres:16-alpine
-    restart: unless-stopped
-    env_file: .env
-    environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./scripts/db/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    ports:
-      - "5433:5432"   # exposed on non-default port for safety
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  # ── Redis ────────────────────────────────────────────────────────────────────
+  # ── Redis (Celery broker + cache) ────────────────────────────────────────────
   redis:
     image: redis:7-alpine
     restart: unless-stopped
     command: redis-server --requirepass ${REDIS_PASSWORD:-redispassword} --save 60 1 --loglevel warning
     volumes:
       - redis_data:/data
+    ports:
+      - "6379:6379"
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
@@ -56,12 +36,13 @@ services:
   backend:
     <<: *backend-common
     command: >
-      sh -c "python manage.py wait_for_db &&
-             python manage.py migrate --noinput &&
+      sh -c "python manage.py migrate --noinput &&
              python manage.py collectstatic --noinput &&
              python manage.py runserver 0.0.0.0:8000"
     ports:
       - "8000:8000"
+    environment:
+      DJANGO_SETTINGS_MODULE: auditshield.settings.development
 
   # ── Celery Worker (async tasks: emails, PDF, OCR) ────────────────────────────
   celery_worker:
@@ -85,7 +66,7 @@ services:
     ports:
       - "5555:5555"
 
-  # ── React Frontend ───────────────────────────────────────────────────────────
+  # ── Angular Frontend ──────────────────────────────────────────────────────────
   frontend:
     build:
       context: ./frontend
@@ -94,10 +75,9 @@ services:
       - ./frontend:/app
       - /app/node_modules
     ports:
-      - "3000:3000"
+      - "4200:4200"
     environment:
-      - VITE_API_URL=http://localhost:8000/api/v1
-      - VITE_WS_URL=ws://localhost:8000/ws
+      - API_URL=http://localhost:8000/api/v1
 
   # ── Nginx (reverse proxy) ────────────────────────────────────────────────────
   nginx:
@@ -129,7 +109,6 @@ services:
       - s3  # only starts with: docker-compose --profile s3 up
 
 volumes:
-  postgres_data:
   redis_data:
   media_data:
   static_data:
