--- a/backend/Dockerfile.dev
+++ b/backend/Dockerfile.dev
@@ -16,8 +16,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 WORKDIR /app
 
 # Install Python deps first (layer cache)
-COPY requirements/development.txt /tmp/requirements.txt
-RUN pip install --upgrade pip && pip install -r /tmp/requirements.txt
+COPY requirements/ /tmp/requirements/
+RUN pip install --upgrade pip && pip install -r /tmp/requirements/development.txt
 
 # Copy source
 COPY . .
