--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -5,8 +5,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
-COPY requirements/production.txt /tmp/requirements.txt
-RUN pip install --upgrade pip && pip wheel --no-cache-dir --no-deps --wheel-dir /wheels -r /tmp/requirements.txt
+COPY requirements/ /tmp/requirements/
+RUN pip install --upgrade pip && pip wheel --no-cache-dir --no-deps --wheel-dir /wheels -r /tmp/requirements/production.txt
 
 # ─── Final image ──────────────────────────────────────────────────────────────
 FROM python:3.12-slim
