--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,6 @@
-version: "3.9"
-
 # ─── Development stack ────────────────────────────────────────────────────────
-# Usage: docker-compose up --build
-# Production: docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d
+# Usage: docker compose up --build
+# Production: docker compose -f docker-compose.yml -f docker-compose.prod.yml up -d
 
 x-backend-common: &backend-common
   build:
