--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,10 +22,9 @@ services:
     command: redis-server --requirepass ${REDIS_PASSWORD:-redispassword} --save 60 1 --loglevel warning
     volumes:
       - redis_data:/data
-    ports:
-      - "6379:6379"
+    # No host port needed — backend/celery connect via internal Docker network
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: ["CMD", "redis-cli", "-a", "${REDIS_PASSWORD:-redispassword}", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -73,7 +72,7 @@ services:
       - ./frontend:/app
       - /app/node_modules
     ports:
-      - "4200:4200"
+      - "4200:3000"
     environment:
       - API_URL=http://localhost:8000/api/v1
 
@@ -86,7 +85,7 @@ services:
       - media_data:/app/media:ro
       - static_data:/app/static:ro
     ports:
-      - "80:80"
+      - "8080:80"
     depends_on:
       - backend
       - frontend
