feat: add Fly.io deployment config for backend
Health check:
- Add GET /health/ endpoint (no auth) returning JSON {status,service,timestamp}
- Required by Fly.io liveness/readiness probes and load balancers

Fly.io config (backend/fly.toml):
- App: auditshield-backend, region: jnb (Johannesburg, closest to Rwanda)
- 512mb shared-cpu-1x VM, min 1 machine always running
- force_https, auto stop/start machines
- Health check: GET /health/ every 30s with 15s grace period
- All secrets managed via fly secrets (not committed)

entrypoint.sh:
- Runs migrate --noinput, collectstatic --clear, then gunicorn
- PORT and GUNICORN_WORKERS configurable via env (default 8080, 2 workers)

Dockerfile.prod:
- Switch EXPOSE from 8000 → 8080 (Fly.io convention)
- Add CMD ["./entrypoint.sh"] so container starts without external orchestration
- PORT env var defaults to 8080

Co-Authored-By: manzi osee <oseemanzi3@gmail.com>

--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -26,9 +26,14 @@ RUN pip install --no-cache /wheels/*
 
 COPY --chown=appuser:appgroup . .
 
+RUN chmod +x entrypoint.sh
+
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
-    DJANGO_SETTINGS_MODULE=auditshield.settings.production
+    DJANGO_SETTINGS_MODULE=auditshield.settings.production \
+    PORT=8080
 
 USER appuser
-EXPOSE 8000
+EXPOSE 8080
+
+CMD ["./entrypoint.sh"]
