--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -13,9 +13,11 @@ primary_region = "jnb"   # Johannesburg — closest to Rwanda/East Africa
   PYTHONUNBUFFERED       = "1"
   PORT                   = "8080"
   GUNICORN_WORKERS       = "2"
+  # SQLite lives on the persistent volume at /data
+  TURSO_DATABASE_URL     = "file:/data/db.sqlite3"
+  MEDIA_ROOT             = "/data/media"
   # All secrets below must be set via: fly secrets set KEY=value
-  # DJANGO_SECRET_KEY, TURSO_DATABASE_URL, TURSO_AUTH_TOKEN,
-  # REDIS_URL, CELERY_BROKER_URL, FILE_ENCRYPTION_KEY,
+  # DJANGO_SECRET_KEY, REDIS_URL, CELERY_BROKER_URL, FILE_ENCRYPTION_KEY,
   # DJANGO_ALLOWED_HOSTS, CORS_ALLOWED_ORIGINS,
   # EMAIL_HOST_USER, EMAIL_HOST_PASSWORD
 
@@ -38,6 +40,10 @@ primary_region = "jnb"   # Johannesburg — closest to Rwanda/East Africa
     path         = "/health/"
     protocol     = "http"
     timeout      = "5s"
+
+[[mounts]]
+  source      = "auditshield_data"
+  destination = "/data"
 
 [[vm]]
   memory   = "512mb"
